--- a/src/components/Suggestion.css
+++ b/src/components/Suggestion.css
@@ -4,7 +4,7 @@
   display: block;
   position: relative;
   background-color: #f9f9f9;
-  min-width: 100px;
+  min-width: 120px;
   max-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
@@ -15,4 +15,5 @@
 }
 .dropdown-open:hover {
   background-color: #979797;
+  cursor: pointer;
 }
